--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/src/examples"]
 	path = src/src/examples
 	url = https://github.com/ros2/examples
+[submodule "src/examples"]
+	path = src/examples
+	url = https://github.com/ros2/examples
