--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "src/examples"]
-	path = src/examples
-	url = https://github.com/ros2/examples.git
 [submodule "src/grid_map"]
 	path = src/grid_map
 	url = https://github.com/ANYbotics/grid_map.git
@@ -13,3 +10,6 @@
 [submodule "src/urdf_tutorial"]
 	path = src/urdf_tutorial
 	url = https://github.com/ros/urdf_tutorial.git
+[submodule "src/rbdl"]
+	path = src/rbdl
+	url = https://github.com/rbdl/rbdl.git
