--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "src/pinocchio"]
 	path = src/pinocchio
 	url = https://github.com/stack-of-tasks/pinocchio.git
+[submodule "src/librealsense"]
+	path = src/librealsense
+	url = https://github.com/IntelRealSense/librealsense.git
